--- a/src/app/modules/main/menu/menu.component.html
+++ b/src/app/modules/main/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu">
     <div class="account" [routerLink]="['/main', 'account-details']">Account Details</div>
-    <div class="funds" [routerLink]="['/main', 'funds-transfer']">Funds Transfer</div>
+    <div class="funds" [routerLink]="['/main', 'fund-transfer']">Funds Transfer</div>
     <div class="nominee" [routerLink]="['/main', 'nominee-maintenance']">Nominee Maintenance</div>
     <div class="profile" [routerLink]="['/main', 'profile']">Profile</div>
     <div class="logout" [routerLink]="['/login']">Logout</div>
